--- a/app/src/main/res/layout/activity_video_detail.xml
+++ b/app/src/main/res/layout/activity_video_detail.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@color/grey"
-              android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/grey"
+    android:orientation="vertical">
 
     <include
         android:id="@+id/toolbar"
-        layout="@layout/layout_toolbar"/>
+        layout="@layout/layout_toolbar" />
 
     <com.youku.player.base.YoukuPlayerView
         android:id="@+id/youku_player"
@@ -24,14 +24,14 @@
                 android:id="@+id/iv_blur"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scaleType="centerCrop"/>
+                android:scaleType="centerCrop" />
 
             <ImageView
                 android:id="@+id/iv_play"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_centerInParent="true"
-                android:src="@drawable/ic_video_play"/>
+                android:src="@drawable/ic_video_play_big" />
         </RelativeLayout>
     </com.youku.player.base.YoukuPlayerView>
 
@@ -54,7 +54,7 @@
                     android:layout_height="@dimen/video_info_area_height"
                     android:background="@color/white"
                     android:paddingLeft="@dimen/base_margin"
-                    android:paddingRight="@dimen/base_margin">
+                    android:paddingRight="@dimen/base_little_margin">
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -66,7 +66,7 @@
                         <ImageView
                             android:layout_width="@dimen/video_info_area_icon_size"
                             android:layout_height="@dimen/video_info_area_icon_size"
-                            android:src="@drawable/ic_watched"/>
+                            android:src="@drawable/ic_watched" />
 
                         <TextView
                             android:id="@+id/tv_watch_count"
@@ -74,21 +74,30 @@
                             android:layout_height="wrap_content"
                             android:text="0次播放"
                             android:textColor="@color/content_text"
-                            android:textSize="@dimen/video_info_area_common_text_size"/>
+                            android:textSize="@dimen/video_info_area_common_text_size" />
                     </LinearLayout>
+
+                    <ImageView
+                        android:id="@+id/iv_download"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_alignParentRight="true"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/ic_download" />
 
                     <LinearLayout
                         android:id="@+id/ll_down"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="@dimen/base_margin"
+                        android:layout_toLeftOf="@id/iv_download"
                         android:gravity="center"
                         android:orientation="horizontal">
 
                         <ImageView
                             android:layout_width="@dimen/video_info_area_icon_size"
                             android:layout_height="@dimen/video_info_area_icon_size"
-                            android:src="@drawable/ic_down"/>
+                            android:src="@drawable/ic_down" />
 
                         <TextView
                             android:id="@+id/tv_down"
@@ -97,7 +106,7 @@
                             android:gravity="center"
                             android:text="0"
                             android:textColor="@color/content_text"
-                            android:textSize="@dimen/video_info_area_common_text_size"/>
+                            android:textSize="@dimen/video_info_area_common_text_size" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -112,7 +121,7 @@
                         <ImageView
                             android:layout_width="@dimen/video_info_area_icon_size"
                             android:layout_height="@dimen/video_info_area_icon_size"
-                            android:src="@drawable/ic_up"/>
+                            android:src="@drawable/ic_up" />
 
                         <TextView
                             android:id="@+id/tv_up"
@@ -121,16 +130,8 @@
                             android:gravity="center"
                             android:text="0"
                             android:textColor="@color/content_text"
-                            android:textSize="@dimen/video_info_area_common_text_size"/>
+                            android:textSize="@dimen/video_info_area_common_text_size" />
                     </LinearLayout>
-
-                    <ImageView
-                        android:id="@+id/iv_download"
-                        android:layout_toLeftOf="@id/ll_up"
-                        android:layout_marginRight="@dimen/base_margin"
-                        android:scaleType="fitCenter"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"/>
 
                 </RelativeLayout>
 
@@ -153,7 +154,7 @@
                         android:text="--"
                         android:textColor="@color/title_text"
                         android:textSize="@dimen/video_info_area_big_text_size"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/tv_publish_time"
@@ -164,7 +165,7 @@
                         android:layout_marginTop="@dimen/base_little_margin"
                         android:text="--"
                         android:textColor="@color/content_text"
-                        android:textSize="@dimen/video_info_area_common_text_size"/>
+                        android:textSize="@dimen/video_info_area_common_text_size" />
 
                 </RelativeLayout>
 
@@ -194,14 +195,14 @@
                             android:layout_marginLeft="@dimen/base_little_margin"
                             android:text="@string/anthology"
                             android:textColor="@color/title_text"
-                            android:textSize="@dimen/video_info_area_common_text_size"/>
+                            android:textSize="@dimen/video_info_area_common_text_size" />
 
                         <ImageView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentLeft="true"
                             android:layout_centerVertical="true"
-                            android:src="@drawable/shape_thin_rectangle"/>
+                            android:src="@drawable/shape_thin_rectangle" />
 
                     </RelativeLayout>
 
@@ -211,7 +212,7 @@
                         android:layout_height="wrap_content"
                         android:layout_below="@id/rl_anthology_text_container"
                         app:columnCount="5"
-                        app:orientation="horizontal"/>
+                        app:orientation="horizontal" />
 
                 </RelativeLayout>
 
@@ -241,14 +242,14 @@
                             android:layout_marginLeft="@dimen/base_little_margin"
                             android:text="@string/related_video"
                             android:textColor="@color/title_text"
-                            android:textSize="@dimen/video_info_area_common_text_size"/>
+                            android:textSize="@dimen/video_info_area_common_text_size" />
 
                         <ImageView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentLeft="true"
                             android:layout_centerVertical="true"
-                            android:src="@drawable/shape_thin_rectangle"/>
+                            android:src="@drawable/shape_thin_rectangle" />
 
                     </RelativeLayout>
 
@@ -257,7 +258,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@id/rl_related_video_text_container"
-                        android:background="@color/white"/>
+                        android:background="@color/white" />
 
                     <TextView
                         android:id="@+id/tv_empty_list"
@@ -268,18 +269,18 @@
                         android:text="@string/no_related_video"
                         android:textColor="@color/content_text"
                         android:textSize="@dimen/video_info_area_common_text_size"
-                        android:visibility="invisible"/>
+                        android:visibility="invisible" />
                 </RelativeLayout>
 
             </LinearLayout>
 
         </ScrollView>
 
-        <!--<FrameLayout-->
-            <!--android:id="@+id/fl_empty_view"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:background="@color/grey"/>-->
+        <FrameLayout
+            android:id="@+id/fl_empty_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/grey" />
 
     </RelativeLayout>
 
