cached and caching video

--- a/app/src/main/res/layout/activity_video_list.xml
+++ b/app/src/main/res/layout/activity_video_list.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:fitsSystemWindows="true"
     android:orientation="vertical">
 
@@ -53,6 +54,7 @@
             android:layout_weight="1"
             android:background="@color/light_red"
             android:gravity="center"
+            app:cb_text="@string/delete"
             android:textColor="@color/white"
             android:textSize="@dimen/content_text_size_big" />
     </LinearLayout>
