--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -23,6 +23,7 @@
     <dimen name="select_button_height">35dp</dimen>
     <dimen name="select_button_width">60dp</dimen>
     <dimen name="load_video_detail_progress_size">40dp</dimen>
+    <dimen name="caching_video_header_height">60dp</dimen>
 
     <!-- text -->
     <dimen name="title_text_size">14sp</dimen>
