--- a/app/src/main/res/layout/profile_content_view.xml
+++ b/app/src/main/res/layout/profile_content_view.xml
@@ -17,6 +17,7 @@
         android:layout_height="@dimen/dimen_1dp"/>
 
     <com.fangxu.dota2helper.ui.widget.ProfileItemLayout
+        android:id="@+id/pil_cached_video"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:pil_text="@string/cached_video"/>
