--- a/app/src/main/res/layout/item_caching_video.xml
+++ b/app/src/main/res/layout/item_caching_video.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:foreground="?attr/selectableItemBackground"
-    android:paddingLeft="@dimen/base_margin"
-    android:paddingRight="@dimen/base_margin">
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:foreground="?attr/selectableItemBackground"
+                android:paddingLeft="@dimen/base_margin"
+                android:paddingRight="@dimen/base_margin">
 
     <com.fangxu.dota2helper.ui.widget.TickButton
         android:id="@+id/tb_select"
@@ -16,7 +16,7 @@
         android:layout_marginRight="@dimen/base_little_margin"
         android:visibility="gone"
         app:tb_select_background="@drawable/ic_tick_filled"
-        app:tb_unselect_background="@drawable/shape_tick_empty" />
+        app:tb_unselect_background="@drawable/shape_tick_empty"/>
 
     <RelativeLayout
         android:id="@+id/rl_background_container"
@@ -31,14 +31,29 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/color_primary"
-            android:scaleType="centerCrop" />
+            android:scaleType="centerCrop"/>
+
+        <FrameLayout
+            android:id="@+id/fl_alpha_layer"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/alpha_black"
+            android:visibility="gone">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_pause"/>
+
+        </FrameLayout>
     </RelativeLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_0.5dp"
         android:layout_below="@id/rl_background_container"
-        android:background="@color/grey_light" />
+        android:background="@color/grey_light"/>
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -57,16 +72,15 @@
             android:ellipsize="end"
             android:includeFontPadding="false"
             android:maxLines="2"
-            android:text="kdfjls"
             android:textColor="@color/title_text"
-            android:textSize="@dimen/title_text_size" />
+            android:textSize="@dimen/title_text_size"/>
 
         <ProgressBar
             android:id="@+id/progressbar"
             style="@style/DownloadProgressStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true" />
+            android:layout_alignParentBottom="true"/>
 
         <TextView
             android:id="@+id/tv_cache_state"
@@ -74,8 +88,7 @@
             android:layout_height="wrap_content"
             android:layout_above="@id/progressbar"
             android:layout_marginBottom="@dimen/base_little_margin"
-            android:text="缓存开始"
-            android:textSize="@dimen/content_text_size" />
+            android:textSize="@dimen/content_text_size"/>
 
         <TextView
             android:id="@+id/tv_video_size"
@@ -84,8 +97,7 @@
             android:layout_above="@id/progressbar"
             android:layout_alignParentRight="true"
             android:layout_marginBottom="@dimen/base_little_margin"
-            android:text="123.3m"
-            android:textSize="@dimen/content_text_size" />
+            android:textSize="@dimen/content_text_size"/>
 
         <TextView
             android:id="@+id/tv_divider"
@@ -96,7 +108,7 @@
             android:layout_marginRight="@dimen/dimen_1dp"
             android:layout_toLeftOf="@id/tv_video_size"
             android:text="/"
-            android:textSize="@dimen/content_text_size" />
+            android:textSize="@dimen/content_text_size"/>
 
         <TextView
             android:id="@+id/tv_cached_size"
@@ -106,8 +118,7 @@
             android:layout_marginBottom="@dimen/base_little_margin"
             android:layout_marginRight="@dimen/dimen_1dp"
             android:layout_toLeftOf="@id/tv_divider"
-            android:text="12.3m"
-            android:textSize="@dimen/content_text_size" />
+            android:textSize="@dimen/content_text_size"/>
     </RelativeLayout>
 
 </RelativeLayout>
