--- a/app/src/main/res/layout/item_header_caching_controller.xml
+++ b/app/src/main/res/layout/item_header_caching_controller.xml
@@ -1,9 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView
-    android:id="@+id/tv_controller_header"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="@dimen/base_margin"
-    android:textColor="@color/black_light"
-    android:textSize="@dimen/title_text_size"/>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="@dimen/base_margin">
+
+    <ImageView
+        android:id="@+id/iv_icon"
+        android:layout_width="@dimen/video_play_icon_size_small"
+        android:layout_height="@dimen/video_play_icon_size_small"
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="@dimen/base_margin"
+        android:src="@drawable/ic_pause_all"/>
+
+    <TextView
+        android:id="@+id/tv_controller_header"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@id/iv_icon"
+        android:paddingLeft="@dimen/base_little_margin"
+        android:text="kfldsfdjght"
+        android:textColor="@color/black_light"
+        android:textSize="@dimen/title_text_size"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dimen_0.5dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="@dimen/base_margin"
+        android:layout_marginRight="@dimen/base_margin"
+        android:layout_marginTop="@dimen/base_margin"
+        android:background="@color/grey_light"/>
+</RelativeLayout>
+
