--- a/app/src/main/res/layout/activity_video_detail.xml
+++ b/app/src/main/res/layout/activity_video_detail.xml
@@ -72,7 +72,6 @@
                             android:id="@+id/tv_watch_count"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="0次播放"
                             android:textColor="@color/content_text"
                             android:textSize="@dimen/video_info_area_common_text_size" />
                     </LinearLayout>
@@ -82,6 +81,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_alignParentRight="true"
+                        android:paddingLeft="@dimen/base_little_margin"
+                        android:paddingRight="@dimen/base_margin"
                         android:scaleType="fitCenter"
                         android:src="@drawable/ic_download" />
 
@@ -280,7 +281,17 @@
             android:id="@+id/fl_empty_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/grey" />
+            android:background="@color/grey">
+
+            <com.wang.avi.AVLoadingIndicatorView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:visibility="visible"
+                app:indicator="BallPulse"
+                app:indicator_color="@color/red_dark" />
+
+        </FrameLayout>
 
     </RelativeLayout>
 
