--- a/app/src/main/res/layout/activity_video_list.xml
+++ b/app/src/main/res/layout/activity_video_list.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:fitsSystemWindows="true"
     android:orientation="vertical">
 
@@ -21,11 +21,30 @@
             android:layout_height="match_parent"
             android:background="@color/white" />
 
-        <FrameLayout
+        <LinearLayout
             android:id="@+id/fl_empty_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="gone" />
+            android:background="@color/grey"
+            android:gravity="center"
+            android:visibility="gone"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/iv_empty_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/tv_empty_hint"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/base_little_margin"
+                android:singleLine="true"
+                android:textColor="@color/grey_dark"
+                android:textSize="@dimen/content_text_size_big" />
+
+        </LinearLayout>
     </RelativeLayout>
 
     <LinearLayout
@@ -52,11 +71,11 @@
             android:layout_width="@dimen/dimen_0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@color/light_red"
+            android:background="@color/red_light"
             android:gravity="center"
-            app:cb_text="@string/delete"
             android:textColor="@color/white"
-            android:textSize="@dimen/content_text_size_big" />
+            android:textSize="@dimen/content_text_size_big"
+            app:cb_text="@string/delete" />
     </LinearLayout>
 
 </LinearLayout>
