--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,8 +9,9 @@
     <color name="title_text">#212121</color>
     <color name="content_text">#727272</color>
 
-    <color name="small_circle_blue">#4cb7ff</color>
-    <color name="small_circle_red">#fc382e</color>
+    <color name="blue_light">#4cb7ff</color>
+    <color name="small_circle_blue">@color/blue_light</color>
+    <color name="small_circle_red">@color/red_light</color>
     <color name="small_circle_orange">#ff9500</color>
 
     <color name="alpha_white_0">#1affffff</color>
@@ -20,8 +21,8 @@
     <color name="grey">#eeeeee</color>
     <color name="grey_light">#f5f5f5</color>
     <color name="grey_dark">#666666</color>
-    <color name="light_red">#f24b17</color>
-    <color name="dark_red">#c62828</color>
+    <color name="red_light">#f24b17</color>
+    <color name="red_dark">#c62828</color>
     <color name="black">#000000</color>
     <color name="alpha_black">#80000000</color>
     <color name="black_light">#0e0e0e</color>
