--- a/app/src/main/res/layout/activity_full_screen_video.xml
+++ b/app/src/main/res/layout/activity_full_screen_video.xml
@@ -1,25 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.youku.player.base.YoukuPlayerView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/youku_player"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout
-        android:id="@+id/rl_blur_container"
+    <com.youku.player.base.YoukuPlayerView
+        android:id="@+id/youku_player"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/iv_blur"
+        <RelativeLayout
+            android:id="@+id/rl_blur_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop" />
+            android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/iv_play"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_centerInParent="true"
-            android:src="@drawable/ic_video_play_big" />
-    </RelativeLayout>
-</com.youku.player.base.YoukuPlayerView>
+            <ImageView
+                android:id="@+id/iv_blur"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop" />
+
+            <ImageView
+                android:id="@+id/iv_play"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_centerInParent="true"
+                android:src="@drawable/ic_video_play_big" />
+        </RelativeLayout>
+    </com.youku.player.base.YoukuPlayerView>
+</LinearLayout>
+
+
