--- a/app/src/main/res/drawable/shape_tick_empty.xml
+++ b/app/src/main/res/drawable/shape_tick_empty.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="oval">
     <solid android:color="@color/transparent"/>
-    <stroke android:color="@color/grey_dark"
+    <stroke android:color="@color/grey_dark1"
         android:width="@dimen/dimen_1dp"/>
 </shape>
