--- a/app/src/main/res/layout/activity_video_list.xml
+++ b/app/src/main/res/layout/activity_video_list.xml
@@ -41,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/base_little_margin"
                 android:singleLine="true"
-                android:textColor="@color/grey_dark"
+                android:textColor="@color/grey_dark1"
                 android:textSize="@dimen/content_text_size_big" />
 
         </LinearLayout>
