--- a/app/src/main/res/layout/item_caching_video.xml
+++ b/app/src/main/res/layout/item_caching_video.xml
@@ -52,7 +52,8 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_0.5dp"
-        android:layout_below="@id/rl_background_container" />
+        android:layout_below="@id/rl_background_container"
+        android:background="@color/grey_dark2"/>
 
     <RelativeLayout
         android:layout_width="wrap_content"
