--- a/app/src/main/res/layout/activity_base_webview.xml
+++ b/app/src/main/res/layout/activity_base_webview.xml
@@ -1,27 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:fitsSystemWindows="true"
-              android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    android:orientation="vertical">
 
     <include
         android:id="@+id/toolbar"
-        layout="@layout/layout_toolbar"/>
+        layout="@layout/layout_toolbar" />
 
-    <ProgressBar android:id="@+id/webview_progressbar"
-                 style="?android:attr/progressBarStyleHorizontal"
-                 xmlns:android="http://schemas.android.com/apk/res/android"
-                 android:layout_width="fill_parent"
-                 android:layout_height="@dimen/dimen_2dp"
-                 android:background="@null"
-                 android:indeterminateOnly="false"
-                 android:max="100"
-                 android:progressDrawable="@drawable/webview_progress_bar"/>
-
-    <WebView
-        android:id="@+id/webview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+    <include
+        layout="@layout/layout_base_webview" />
 
 </LinearLayout>
