--- a/app/src/main/res/layout/youku_player_title.xml
+++ b/app/src/main/res/layout/youku_player_title.xml
@@ -2,22 +2,32 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/layout_pop_top"
     android:layout_width="fill_parent"
-    android:layout_height="@dimen/detail_play_title_height"
+    android:layout_height="40dp"
     android:layout_margin="0dp"
     android:background="#BF000000"
     android:orientation="horizontal"
-    android:padding="0dp" >
+    android:padding="0dp">
+
+    <ImageView
+        android:id="@+id/iv_back"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_vertical"
+        android:paddingLeft="@dimen/base_margin"
+        android:paddingRight="@dimen/base_margin"
+        android:scaleType="centerInside"
+        android:src="@drawable/ic_left_arrow" />
 
     <TextView
         android:id="@+id/tv_detail_play_title"
         style="@style/detail_play_title"
         android:layout_width="0dp"
-        android:layout_height="@dimen/detail_play_title_height"
+        android:layout_height="match_parent"
         android:layout_gravity="left|center_vertical"
-        android:layout_marginLeft="@dimen/base_margin"
         android:layout_weight="1"
         android:ellipsize="end"
         android:gravity="center_vertical"
         android:padding="0dp"
-        android:singleLine="true" />
+        android:singleLine="true"
+        android:textSize="14sp" />
 </LinearLayout>
