--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -65,6 +65,7 @@
     <dimen name="profile_item_height">50dp</dimen>
     <dimen name="profile_right_arrow_size">18dp</dimen>
     <dimen name="select_tick_size">15dp</dimen>
+    <dimen name="profile_sub_view_marginRight">25dp</dimen>
 
     <!-- google -->
     <dimen name="refresh_header_height_google">100dp</dimen>
